--- a/cadc-wcs/build.gradle
+++ b/cadc-wcs/build.gradle
@@ -1,7 +1,9 @@
 plugins {
-  id "c"
-  id "java"
-  id "maven"
+  id 'c'
+  id 'java'
+  id 'maven'
+  id 'maven-publish'
+  id 'com.jfrog.bintray' version '1.7.1'
 }
 
 repositories {
@@ -14,16 +16,17 @@ repositories {
   }
 }
 
-version = '1.0'
-group = 'opencadc'
 sourceCompatibility = 1.7
 
+group = 'org.opencadc'
+
+version = '1.0'
+
 dependencies {
-  compile group: 'log4j', name: 'log4j', version: '1.+'
+  compile 'log4j:log4j:1.+'
+  compile 'org.opencadc:cadc-util:1.+'
 
-  compile 'opencadc:cadcUtil:1.+'
-
-  testCompile group: 'junit', name: 'junit', version: '4.+'
+  testCompile 'junit:junit:4.+'
 }
 
 def tmpBuildDir = 'build/tmp'
