--- a/cadc-wcs/build.gradle
+++ b/cadc-wcs/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'java'
     id 'maven'
-    id 'application'
     id 'maven-publish'
 }
 
@@ -14,29 +13,12 @@ sourceCompatibility = 1.8
 group = 'org.opencadc'
 version = '2.1.0'
 
+description = 'OpenCADC WCS JNI library'
+def git_url = 'https://github.com/opencadc/wcs'
+
 dependencies {
     implementation 'log4j:log4j:1.2.17'
     implementation 'org.opencadc:cadc-util:[1.3.13,2.0.0)'
-    implementation 'org.opencadc:cadc-log:[1.1.3,2.0.0)'
 
     testImplementation 'junit:junit:[4.13,5.0]'
 }
-
-def tmpBuildDir = 'build/tmp'
-
-test {
-    systemProperty "java.library.path", "/usr/local/lib:/usr/lib:/usr/lib64:" + System.getProperty("java.io.tmpdir")
-}
-
-task generateJniHeaders(type: JavaCompile) {
-    classpath = sourceSets.main.compileClasspath
-    destinationDir file("${tmpBuildDir}")
-    source = sourceSets.main.java
-    options.compilerArgs += [
-            '-h', file("${tmpBuildDir}"),
-            '-d', file("${tmpBuildDir}")
-    ]
-    options.verbose = false
-}
-
-classes.dependsOn generateJniHeaders
