--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,4 +34,4 @@ jobs:
       run: cd cadc-wcs && ../gradlew -info clean build javadoc
       
     - name: java build -- jsky
-      run: cd jsky && -info clean build javadoc
+      run: cd jsky && --info clean build javadoc
