--- a/cadc-erfa/build.gradle
+++ b/cadc-erfa/build.gradle
@@ -2,12 +2,15 @@ plugins {
     id 'java'
     id 'maven'
     id 'maven-publish'
+    id 'checkstyle'
 }
 
 repositories {
     mavenCentral()
     mavenLocal()
 }
+
+apply from: '../opencadc.gradle'
 
 sourceCompatibility = 1.8
 group = 'org.opencadc'
