--- a/cadc-wcs/build.gradle
+++ b/cadc-wcs/build.gradle
@@ -10,6 +10,8 @@ repositories {
     mavenLocal()
 }
 
+apply from: '../opencadc.gradle'
+
 sourceCompatibility = 1.8
 group = 'org.opencadc'
 version = '2.1.4'
@@ -25,24 +27,5 @@ dependencies {
     implementation 'org.opencadc:cadc-util:[1.6,2.0)'
 
     testImplementation 'junit:junit:[4.13,5.0]'
-    testCompile 'com.puppycrawl.tools:checkstyle:8.2'
-    checkstyleDep 'org.opencadc:cadc-quality:[1.0,)'
 }
 
-checkstyle {
-    ignoreFailures = false
-    config = resources.text.fromArchiveEntry(configurations.checkstyleDep, 'cadc_checkstyle.xml')
-    toolVersion = '8.2'
-    sourceSets = []
-}
-
-tasks.withType(Checkstyle).each { checkstyleTask ->
-    checkstyleTask.doLast {
-        reports.all { report ->
-            def outputFile = report.destination
-            if (outputFile.exists() && outputFile.text.contains("<error ")) {
-                throw new GradleException("There were checkstyle warnings! For more info check $outputFile")
-            }
-        }
-    }
-}
